refactor: Pair를 사용하지 않도록 수정